fix: 修复客服转接功能无响应问题
问题原因:
- 前端API配置错误，POST请求使用params而非data发送参数
- 导致Java后端@RequestBody无法读取请求体数据

修复内容:
1. template/admin/src/api/kefu.js
   - serviceTransfer函数：将params改为data
   - 确保POST请求参数通过请求体发送

2. claudedocs/测试环境配置和凭证.md
   - 添加详细的修复记录和测试方法
   - 记录前后端数据传递规范

影响范围:
✅ 客服转接功能正常工作
✅ 转接列表显示在线客服
✅ 转接记录正确更新
✅ WebSocket通知正确发送

🤖 Generated with Claude Code

Co-Authored-By: Claude <noreply@anthropic.com>